# starrocks-profile-analyzer

./: .clinerules  .gitignore  BACKEND_REFACTOR_SUMMARY.md  Cargo.toml  DEBUG_GUIDE.md  DETAILED_VALIDATION_REPORT.md  IMPLEMENTATION_REPORT.md  Makefile  QUICK_START.md  README.md  STARROCKS_FINAL_SINK_AND_TREE_DESIGN.md  STARROCKS_PROFILE_ANALYZER_DESIGN.md  VALIDATION_REPORT.md  package-lock.json  package.json  project.json  start_all.sh  test_parse.rs  test_profile.txt  test_profile4_api.sh  test_top_nodes.py
backend/: Cargo.toml  PARSER_USAGE.md  PROFILE_FORMAT_SPEC.md  REFACTOR_GUIDE.md  test_all_profiles.rs  test_compatibility.rs  test_node_info.rs  validate_all_profiles.rs  validate_detailed.rs
backend/src/: constants.rs  lib.rs  main.rs  models.rs
backend/src/analyzer/: hotspot_detector.rs  mod.rs  suggestion_engine.rs
backend/src/api/: mod.rs
backend/src/parser/: PARSER_REFACTOR_PLAN.md  advanced_parser.rs  composer.rs  error.rs  mod.rs  models.rs  starrocks.rs
backend/src/parser/analysis/: hotspot_detector.rs  mod.rs
backend/src/parser/core/: fragment_parser.rs  metrics_parser.rs  mod.rs  node_info.rs  operator_parser.rs  parsers.rs  profile_node_parser.rs  section_parser.rs  topology_parser.rs  tree_builder.rs  value_parser.rs
backend/src/parser/specialized/: aggregate_strategy.rs  exchange_strategy.rs  join_strategy.rs  mod.rs  olap_table_sink_strategy.rs  result_sink_strategy.rs  scan_strategy.rs  (+1 more)
backend/src/tests/: run_validate_all_profiles.rs  test_official_parsing.rs  validate_all_profiles.rs  validate_detailed.rs
backend/tests/: profile_parsing_test.rs  test_dag_generation.rs  test_generic_parser.rs  test_metrics_parsing.rs  test_operator_metrics.rs  test_parser.rs  test_profiles_validation.rs  test_specialized_metrics.rs  value_parser_test.rs
(+29 files in other folders)
