[package]
name = "starrocks-profile-analyzer"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
nom = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

